# x-realism

./: .gitignore  LICENSE  README.md  conclusion-v0.md
.github/workflows/: pages.yml
_Lab4/: README.md  deploy.md  deploy_distri.md  optimize.md  optimize_distri.md
docs/: conclusion-v0.md  feasibility-v0.md  index.md  research.md
feasibility/: 2022.4.18 feasibility-hrx.md  2022.4.18 feasibility-lly.md
prediscussion/: 2022.3.20 research.md  2022.3.27 discussion.md
reports/: 2022.4.3 research.xkz.md  README.md  code_tree.md  conclusion-v0.md  conclusion.md  feasibility-v0.md  index.md  plan.md  research-v1.md
reports/feasibility/: 2022.4.18 feasibility-xkz.md  2022.4.18 feasibility-ysy.md
reports/prediscussion/: 2022.3.20 plan.md  2022.4.4 meeting.md
reports/research/: 2022.4.3 research-lly.md  2022.4.5 research-hrx.md  2022.4.7 research-lly.md  2022.4.7 research-xkz.md  research-v0.md
reports/research/2022.4.3 research-hrx.assets/: 640
research/: 2022.4.3 research-hrx.md  2022.4.3 research-xkz.md  2022.4.3 research-ysy.md  2022.4.5 research-ysy.md  2022.4.7 research-lly.md
srcs/: Cargo.toml
srcs/.cargo/: config.toml
srcs/initfs/: Cargo.toml  out.img
srcs/initfs/data/: file.txt
srcs/initfs/src/: lib.rs  types.rs
srcs/initfs/tests/: archive_and_read.rs
srcs/os/: Cargo.toml
srcs/os/src/fs/: inode.rs
srcs/os/src/syscall/: fs.rs  mod.rs  process.rs
srcs/os/src/task/: mod.rs  (+1 more)
srcs/src/: main.rs
srcs/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
srcs/user/: Cargo.toml
srcs/user/src/: lib.rs  syscall.rs
